--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Edwon Engineer
 subtitle: 工程师空间
-description: 移动前端工程师
+description: 移动前端工程师，迈向移动全栈工程师的路上
 author: Edwon Lim
 language: zh-Hans
 timezone:
